# inv_secretary

./: README.md
backend/: pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/routers/: news_router.py
backend/app/services/: article_cache_service.py  cache_service.py  news_service.py  summarization_service.py
backend/migrations/: 001_initial_schema.sql
frontend/: .env.local.example  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/: page.tsx
frontend/app/stock/[symbol]/: page.tsx
frontend/components/news/: ArticleList.tsx  DigestCard.tsx
frontend/components/ui/: Header.tsx  Skeletons.tsx  TickerSearch.tsx
frontend/lib/: api.ts  supabase.ts  utils.ts
